--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
 bin_PROGRAMS = sshfs
-sshfs_SOURCES = sshfs.c
+sshfs_SOURCES = sshfs.c cache.c
