--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
 bin_PROGRAMS = sshfs
-sshfs_SOURCES = sshfs.c cache.c
+sshfs_SOURCES = sshfs.c cache.c opts.c
 sshfs_CPPFLAGS = -DFUSE_USE_VERSION=22
