--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
 bin_PROGRAMS = sshfs
-sshfs_SOURCES = sshfs.c cache.c cache.h
+
+if FUSE_OPT_COMPAT
+compat_sources = compat/fuse_opt.c compat/fuse_opt.h
+endif
+
+sshfs_SOURCES = sshfs.c cache.c cache.h $(compat_sources)
 sshfs_CPPFLAGS = -DFUSE_USE_VERSION=25
