--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,11 @@ AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
+LIBS=
+AC_SEARCH_LIBS(dlsym, [dl])
+sshnodelay_libs=$LIBS
+AC_SUBST(sshnodelay_libs)
+
 export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH
 PKG_CHECK_MODULES(SSHFS, [fuse >= 2.2 glib-2.0])
 CFLAGS="$CFLAGS -Wall -W -D_REENTRANT $SSHFS_CFLAGS"
