Add Darwin/OS X specific information to man page
* Volumes are unmounted using "umount" not "fusermount"

* idmap=user is the deafault setting on Darwin/OS X

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,9 +12,12 @@ sshfs_CFLAGS = $(SSHFS_CFLAGS)
 sshfs_CPPFLAGS = -D_REENTRANT -DFUSE_USE_VERSION=26 -DLIBDIR=\"$(libdir)\"
 
 EXTRA_DIST = sshnodelay.c FAQ.txt
-CLEANFILES = sshnodelay.so
+CLEANFILES = sshnodelay.so sshfs.1
 
 dist_man_MANS = sshfs.1
+
+sshfs.1:
+	$(CPP) $(CPPFLAGS) -P -xassembler-with-cpp sshfs.1.in | sed -e '/^$$/d' > sshfs.1
 
 if SSH_NODELAY_SO
 all-local: sshnodelay.so
