--- a/sshfs.1.in
+++ b/sshfs.1.in
@@ -7,7 +7,11 @@ SSHFS \- filesystem client based on ssh
 \fBsshfs\fP [\fIuser\fP@]\fBhost\fP:[\fIdir\fP] \fBmountpoint\fP [\fIoptions\fP]
 .SS unmounting
 .TP
+#ifdef __APPLE__
+\fBumount mountpoint\fP
+#else
 \fBfusermount -u mountpoint\fP
+#endif
 .SH DESCRIPTION
 SSHFS (Secure SHell FileSystem) is a file system for Linux (and other
 operating systems with a FUSE implementation, such as Mac OS X or FreeBSD)
@@ -98,10 +102,18 @@ user/group ID mapping, possible types are:
 .RS 8
 .TP
 none
+#ifdef __APPLE__
+no translation of the ID space
+#else
 no translation of the ID space (default)
+#endif
 .TP
 user
+#ifdef __APPLE__
+only translate UID/GID of connecting user (default)
+#else
 only translate UID of connecting user
+#endif
 .TP
 file
 translate UIDs/GIDs based upon the contents of \fBuidfile \fR and
