--- a/Makefile.am
+++ b/Makefile.am
@@ -14,13 +14,15 @@ sshfs_LDADD = $(SSHFS_LIBS)
 sshfs_CFLAGS = $(SSHFS_CFLAGS)
 sshfs_CPPFLAGS = -D_REENTRANT -DFUSE_USE_VERSION=26 -DLIBDIR=\"$(libdir)\"
 
-EXTRA_DIST = sshnodelay.c
-CLEANFILES = sshnodelay.so sshfs.1
+EXTRA_DIST = sshnodelay.c sshfs.1.in
+CLEANFILES = sshnodelay.so sshfs.1 sshfs.1.tmp
 
 dist_man_MANS = sshfs.1
 
-sshfs.1:
-	$(CPP) $(CPPFLAGS) -P -xassembler-with-cpp sshfs.1.in | sed -e '/^$$/d' > sshfs.1
+sshfs.1: sshfs.1.in
+	$(AM_V_GEN)$(CPP) $(CPPFLAGS) -P -xassembler-with-cpp sshfs.1.in \
+	    | sed -e '/^$$/d' >sshfs.1.tmp || exit 1; \
+	mv sshfs.1.tmp sshfs.1
 
 if SSH_NODELAY_SO
 all-local: sshnodelay.so
