Fix path to compat in -I flag
When defining a -I flag to point into the source directory, we should
prefix the directory with ${srcdir} so that it can be found when the
build is configured to use a build directory that differs from the
source directory.

This fixes "make distcheck".

--- a/configure.ac
+++ b/configure.ac
@@ -51,7 +51,7 @@ LIBS="$LIBS $SSHFS_LIBS"
 AC_CHECK_FUNC([fuse_opt_parse], [have_fuse_opt_parse=yes])
 LIBS="$oldlibs"
 if test "$have_fuse_opt_parse" = no -o "$osname" = darwin; then
-	CFLAGS="$CFLAGS -Icompat"
+	CFLAGS="$CFLAGS -I${srcdir}/compat"
 fi
 AM_CONDITIONAL(FUSE_OPT_COMPAT, test "$have_fuse_opt_parse" = no)
 AM_CONDITIONAL(DARWIN_COMPAT, test "$osname" = darwin)
