Dropped nodelay workaround
This was a performance improvement for SSH versions prior to
4.4. There is no reason to continue to support this.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,8 +15,8 @@ sshfs_CFLAGS = $(SSHFS_CFLAGS)
 sshfs_CPPFLAGS = -D_REENTRANT -DFUSE_USE_VERSION=26 -DLIBDIR=\"$(libdir)\" \
                  -DIDMAP_DEFAULT="\"$(IDMAP_DEFAULT)\""
 
-EXTRA_DIST = sshnodelay.c sshfs.1.in
-CLEANFILES = sshnodelay.so sshfs.1 sshfs.1.tmp
+EXTRA_DIST = sshfs.1.in
+CLEANFILES = sshfs.1 sshfs.1.tmp
 
 dist_man_MANS = sshfs.1
 
@@ -26,17 +26,3 @@ sshfs.1: sshfs.1.in
 	    -e 's,__UNMOUNT_COMMAND__,$(UNMOUNT_COMMAND),g' \
 	    <$(srcdir)/sshfs.1.in >sshfs.1.tmp || exit 1; \
 	mv sshfs.1.tmp sshfs.1
-
-if SSH_NODELAY_SO
-all-local: sshnodelay.so
-
-install-exec-local: sshnodelay.so
-	test -z "$(libdir)" || $(mkdir_p) "$(DESTDIR)$(libdir)"
-	$(INSTALL) -m 755 sshnodelay.so "$(DESTDIR)$(libdir)/sshnodelay.so"
-
-uninstall-local:
-	rm -f "$(DESTDIR)$(libdir)/sshnodelay.so"
-
-sshnodelay.so:
-	$(CC) -Wall -W -s --shared -fPIC $(sshnodelay_libs) sshnodelay.c -o sshnodelay.so
-endif
