--- a/Makefile.am
+++ b/Makefile.am
@@ -15,14 +15,14 @@ sshfs_CFLAGS = $(SSHFS_CFLAGS)
 sshfs_CPPFLAGS = -D_REENTRANT -DFUSE_USE_VERSION=26 -DLIBDIR=\"$(libdir)\" \
                  -DIDMAP_DEFAULT="\"$(IDMAP_DEFAULT)\""
 
-EXTRA_DIST = sshfs.1.in
+EXTRA_DIST = sshfs.1.in meson.build
 CLEANFILES = sshfs.1 sshfs.1.tmp
 
 dist_man_MANS = sshfs.1
 
 sshfs.1: sshfs.1.in
 	$(AM_V_GEN)sed \
-	    -e 's,__IDMAP_DEFAULT__,$(IDMAP_DEFAULT),g' \
-	    -e 's,__UNMOUNT_COMMAND__,$(UNMOUNT_COMMAND),g' \
+	    -e 's/[@]IDMAP_DEFAULT@/$(IDMAP_DEFAULT)/g' \
+	    -e 's/[@]UNMOUNT_COMMAND@/$(UNMOUNT_COMMAND)/g' \
 	    <$(srcdir)/sshfs.1.in >sshfs.1.tmp || exit 1; \
 	mv sshfs.1.tmp sshfs.1
