Added unit tests and travis integration

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 # NOTE! Please use 'git ls-files -i --exclude-standard'
 # command after changing this file, to see if there are
 # any tracked files which get ignored after the change.
-.*
-!.gitignore
 *.o
 *.lo
 *.la
@@ -35,3 +33,4 @@ sshfs.1
 /.pc
 /patches
 /m4
+.deps/
