--- a/meson.build
+++ b/meson.build
@@ -59,3 +59,6 @@ executable('sshfs', sshfs_sources,
 # This is a little ugly. Is there a better way to tell Meson that the
 # manpage is in the build directory?
 install_man(join_paths(meson.current_build_dir(), 'sshfs.1'))
+
+subdir('test')
+
