--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
     - fuse
     - libfuse2
     - libfuse-dev
+before_install:
+   - pip install pip==8.1.1 && pip3 install pip==8.1.1
 install: test/travis-install.sh
 script: test/travis-build.sh
 
