Converted manpage to Restructured Text

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,14 +17,10 @@ sshfs_CFLAGS = $(SSHFS_CFLAGS)
 sshfs_CPPFLAGS = -D_REENTRANT -DFUSE_USE_VERSION=31 -DLIBDIR=\"$(libdir)\" \
                  -DIDMAP_DEFAULT="\"$(IDMAP_DEFAULT)\""
 
-EXTRA_DIST = sshfs.1.in meson.build ChangeLog.rst
-CLEANFILES = sshfs.1 sshfs.1.tmp
+EXTRA_DIST = sshfs.rst sshfs.1 meson.build ChangeLog.rst
+CLEANFILES = sshfs.1
 
 dist_man_MANS = sshfs.1
 
-sshfs.1: sshfs.1.in
-	$(AM_V_GEN)sed \
-	    -e 's/[@]IDMAP_DEFAULT@/$(IDMAP_DEFAULT)/g' \
-	    -e 's/[@]UNMOUNT_COMMAND@/$(UNMOUNT_COMMAND)/g' \
-	    <$(srcdir)/sshfs.1.in >sshfs.1.tmp || exit 1; \
-	mv sshfs.1.tmp sshfs.1
+sshfs.1: sshfs.rst
+	rst2man sshfs.rst sshfs.1
