--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
     - clang
     - gcc
     - gcc-6
+    - python-docutils
 before_install:
    - pip install pip==8.1.1 && pip3 install pip==8.1.1
 install: test/travis-install.sh
