Update to newer CI environment.
The current one causes build failures since recent pytest versions are incompatble with
Python 3.5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
-sudo: required
-dist: xenial
+dist: focal
+sudo: enabled
 
 language:
     - c
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
     packages:
     - valgrind
-    - clang
     - gcc
-    - gcc-6
+    - clang
     - python-docutils
     - python3-pip
     - python3-setuptools
     - ninja-build
+    - meson
+    - python3-pytest
+    - libglib2.0-dev
 install: test/travis-install.sh
 script: test/travis-build.sh
 
