--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.lo
 *.la
 *.gz
+*.swp
 \#*#
 *.orig
 *~
@@ -17,7 +18,7 @@ Makefile.in
 Makefile
 *.m4
 stamp-h*
-config.*
+config.h
 sshfs.1
 /sshfs
 /ltmain.sh
