Remove fuse_opt compatibility code
The fuse_opt compatibility code is no longer needed on macOS. Remove
it since it is not included on any other platform.

--- a/meson.build
+++ b/meson.build
@@ -35,7 +35,7 @@ include_dirs = [ include_directories('.') ]
 sshfs_sources = ['sshfs.c', 'cache.c']
 if target_machine.system() == 'darwin'
   cfg.set_quoted('IDMAP_DEFAULT', 'user')
-  sshfs_sources += [ 'compat/fuse_opt.c', 'compat/darwin_compat.c' ]
+  sshfs_sources += [ 'compat/darwin_compat.c' ]
   include_dirs += [ include_directories('compat') ]
 else
   cfg.set_quoted('IDMAP_DEFAULT', 'none')
